# haskell-ipasir

./: .gitmodules  ChangeLog.md  build  ipasir.cabal  stack.yaml
.pkg-config/: cryptominisat5.pc  ipasircryptominisat5.pc  minicard.pc  pblib.pc
ipasir/: LICENSE  README.md  ipasir.cabal  stack.yaml
ipasir-cryptominisat/: README.md  ipasir-cryptominisat.cabal  stack.yaml
ipasir-cryptominisat/c-sources/: cryptominisat_bindings.c  cryptominisat_bindings.cc  cryptominisat_bindings.h
ipasir-cryptominisat/src/SAT/IPASIR/: Cryptominisat.hs
ipasir-cryptominisat/src/SAT/IPASIR/Cryptominisat/: C.chs
ipasir-cryptominisat/test/: Spec.hs
ipasir-minicard/: grep  ipasir-minicard.cabal
ipasir-minicard/c-sources/: cardinalityAdder.h
ipasir-minicard/src/SAT/IPASIR/: Minicard.hs
ipasir-minicard/src/SAT/IPASIR/Minicard/: C.chs
ipasir-minicard/test/: Spec.hs
ipasir/src/SAT/: IPASIR.hs
ipasir/src/SAT/IPASIR/: Api.hs  CSolver.hs  Cardinality.hs  Clauses.hs  ClausesCache.hs  EnviromentVariable  EnviromentVariable.hs  EnvironmentVariable.hs  Formula.hs  FormulaPrinting.hs  GlobalVariable.hs  HelperVarCache.hs  IndexedFunctor.hs  IpasirSolver.hs  LiteralCache.hs  Literals.hs  ManagedLitCache.hs  Solver.hs  Solving.hs  State.hs  StateStuff.hs  VarCache.hs
ipasir/src/SAT/IPASIR/VarCache/: Debug.hs
ipasir/test/: Spec.hs
ipasir/test/Spec/SAT/: Api.hs  Formula.hs  IPASIR.hs
pb-encoder/: encoder
pb-encoder/HittingSetExperiments/: README.md
pb-encoder/HittingSetExperiments/benchmarks/: example1.txt
pb-encoder/HittingSetExperiments/lib/: pblib
pb-encoder/HittingSetExperiments/tools/: benchmarkEncoder.py  config.py  make_benchmark_makefile.py  make_results_summary.py
pb-encoder/HittingSetExperiments/tools/cardinalityConstraintSATEncoder/: Makefile  Tool.pro  encoder  main.cpp
pb-encoder/pblib/: .gitignore  CMakeLists.txt  cmake_install.cmake
pb-encoder/pblib-haskell/: pblib-haskell.cabal  pblib.cabal
pb-encoder/pblib-haskell/c-sources/: pblib
pb-encoder/pblib-haskell/src/SAT/PseudoBoolean/C/: Bindings.hs
pb-encoder/pblib-haskell/src/SAT/PseudoBoolean/C/Types/: CVector.hs
pb-encoder/pblib/BasicPBSolver/: cmake_install.cmake  testData
pb-encoder/pblib/BasicPBSolver/minisat/: .gitignore  cmake_install.cmake
pb-encoder/pblib/encoder/: amo.cpp  bimander_amo_encoding.cpp  cardencoding.cpp
pb-encoder/pblib/lib/: SimplePBConstraint.h
pb-lib/: ChangeLog.md  LICENSE  installation  pb-lib.cabal  stack.yaml
pb-lib/pblib/: .gitignore  CMakeLists.txt  SimplePBConstraint.cpp  cmake_install.cmake  fixShit  incpbconstraint.cpp  pbconstraint.cpp  pbconstraint.h  pblib.tgz  pblib_c.cpp  pblib_c.hpp  pbo2maxsat.cpp
pb-lib/pblib/BasicPBSolver/: .gitignore  cmake_install.cmake
pb-lib/pblib/BasicPBSolver/minisat/: cmake_install.cmake
pb-lib/pblib/encoder/: amo.cpp  binary_amo.cpp  k-product.cpp  sorting_merging.cpp
pb-lib/pblib/lib/: PBConfig.h  PBParser.h
pb-lib/src/SAT/: PseudoBoolean.hs
pb-lib/src/SAT/IPASIR/: PseudoBoolean.hs
pb-lib/src/SAT/IPASIR/PseudoBoolean/: State.hs
pb-lib/src/SAT/PseudoBoolean/: C.hs  Config.hs
pb-lib/src/SAT/PseudoBoolean/C/: Types.hs
pb-lib/src/SAT/PseudoBoolean/C/Types/: CBool.hs  CConfig.hs  CEnum.hs  CVector.hs  WeightedLit.hs
pb-lib/test/: Spec.hs
src/SAT/: IPASIR.hs
