name:                ipasir-cryptominisat
version:             0.1.0.0
homepage:            https://github.com/chisui/haskell-ipasir/tree/master/ipasir-cryptominisat#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ipasir
  default-language:    Haskell2010

test-suite ipasir-cryptominisat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ipasir-cryptominisat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chisui/haskell-ipasir
