name:                ipasir-minicard
version:             0.1.0.0
homepage:            https://github.com/chisui/haskell-ipasir/tree/master/ipasir-cryptominisat#readme
license:             MIT
license-file:        LICENSE
author:              Gerrit Marquardt
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , c-sources/ipasir.h
--                   , c-sources/cryptominisat_bindings.h
--                   , c-sources/cryptominisat_bindings.c
--                   , lib/linux/libipasircryptominisat5.a
--                   , lib/linux/libcryptominisat5.a
--                   , lib/mac/libipasircryptominisat5.a
--                   , lib/mac/libcryptominisat5.a
--                   , lib/windows/libipasircryptominisat5.a
--                   , lib/windows/libcryptominisat5.a
cabal-version:       >=1.10

library
  Build-tools:         c2hs
  hs-source-dirs:      src
  include-dirs:        c-sources
  Includes:            c-sources/ipasir.h
--                     , c-sources/cryptominisat_bindings.h
--  c-sources:           c-sources/cryptominisat_bindings.c
  Extra-libraries:     stdc++

  exposed-modules:     SAT.IPASIR.Minicard
                     , SAT.IPASIR.Minicard.C
  build-depends:       base >= 4.7 && < 5
                     , ipasir
                     , vector
                     , lens
                     , comonad
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -static -optl-static
  pkgconfig-depends:   minicard

test-suite ipasir-minicard-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ipasir
                     , ipasir-minicard
                     , containers
                     , bifunctors
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chisui/haskell-ipasir
